--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>My First ever website</h1>
     <h3>Look mama i can push git hub</h3>
+    <P>I have learned how to push</P>
+    <p>now am very happy</p>
 </body>
 </html>
